# research-copilot-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  research_workflow.md
skills/00-project-initializer/: SKILL.md
skills/01-task-planner/: SKILL.md
skills/02-research-executor/: SKILL.md
skills/03-review-gate/: SKILL.md
skills/04-manuscript-builder/: SKILL.md
skills/utilities/prior-research-downloader/: SKILL.md
skills/utilities/prior-research-downloader/scripts/: download_prior_research.py  init_prior_research_item.py
skills/utilities/prior-research-ingester/: SKILL.md
skills/utilities/prior-research-ingester/scripts/: ingest_prior_research.py
templates/: AGENTS.md  README.md  research_plan.md
templates/reproduction/: README.md
templates/research_state/: logbook.md  manuscript_plan.md  research_spec.md  state.md  tasks.md  workflow.mmd
tools/: init_research_workspace.py
